--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+.env
 src/main/resources/application.properties
 
 ### IntelliJ IDEA ###
